# rust-firework

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  Makefile copy  README.md  build.rs  compose.yaml  fireworks_audio_3_d_doc.md  imgui.ini  run.sh
.github/scripts/: test_integration.sh
.github/workflows/: ci.yml  integration.yml
assets/config/: physic.toml  renderer.toml
assets/shaders/: instanced_textured_quad.frag.glsl  instanced_textured_quad.vert.glsl  point_rendering.frag.glsl  point_rendering.vert.glsl
doc/: OpenGL - AZDO, Persistent Mapped Buffers.md  architecture_redesign.md  audio.md  audio_thread_unwrap_refactoring.md  console_commands.md  massif_analysis_guide.md  physic_explosion_shapes.md  physic_memory_management.md  profiling.md  profiling_guide.md  renderer_manual.md  unwrap_refactoring_summary.md
integration/visual_test/: README.md  analyze_optical_flow.py  main.py  pyproject.toml
src/: cross.toml  lib.rs  main.rs  profiler.rs  simulator.rs
src/audio_engine/: audio_event.rs  audio_loading.rs  binaural_processing.rs  dsp.rs  fireworks_audio.rs  mod.rs  safewavwriter.rs  settings.rs  trait.rs  types.rs
src/physic_engine/: config.rs  explosion_shape.rs  mod.rs  particle.rs  particle_type.rs  particles_manager.rs  particles_pools.rs  physic_engine_generational_arena.rs  physic_engine_static_aos.rs  rocket.rs  smoke_system.rs  trait.rs  types.rs
src/renderer_engine/: bloom.rs  command_console.rs  config.rs  mod.rs  particle_renderer.rs  renderer.rs  renderer_graphics.rs  renderer_graphics_instanced.rs  shader.rs  tools.rs  trait.rs  types.rs
src/utils/: mod.rs  (+4 more)
tests/: audio_dsp_test.rs  audio_fireworks_test.rs  audio_safewavwriter_test.rs  bloom_structure_test.rs  console_test.rs  explosion_shape_test.rs  helpers.rs  multi_image_tests.rs  physic_engine_generational_arena_test.rs  physic_iter_particles_by_type_test.rs  physic_pool_test.rs  physic_rocket_test.rs  renderer.rs  renderer_shader_reload_regression_test.rs  renderer_shader_reload_source_verification_test.rs  renderer_shader_reload_test.rs  simulator_error_test.rs  simulator_failures_in_all_engines_test.rs  simulator_test.rs  test_renderer_step_frame.rs
(+14 files in other folders)
