# https://doc.rust-lang.org/cargo/reference/config.html#configuration-format
[package]
edition = "2021"
name = "fireworks_sim"
version = "0.1.0"

[dependencies]
# Création fenêtre + gestion input
# last version using glfw2
glfw = "<=0.59.0"
# Liens OpenGL bas-niveau
gl = ">=0.14"

# Gestion des erreurs/logging
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

bytemuck = { version = "1.24.0", features = ["derive"] }
cpal = "0.16"                                            # ou la dernière version
crossbeam = "0.8.4"
derive_builder = "0.20.2"
hound = "3.5"                                            # lecture WAV simple
lazy_static = "1.5.0"
memoffset = "0.9.1"
rand = "0.9.2"
regex = "1.12.2"
rustc_version_runtime = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
itertools = "0.14.0"
generational-arena = "0.2.9"
glam = "0.30.9"
crossbeam-channel = "0.5.15"
image = "0.25.8"
imgui = "0.12.0"
imgui-glfw-rs = "0.12.0"
fuzzy-matcher = "0.3.7"

[dev-dependencies]
criterion = "0.7.0"

[features]
default = ["simd", "test_helpers"] # SIMD activé par défaut
fft = []
no_simd = []                       # Force le mode scalaire
simd = []                          # Active le code SIMD
test_helpers = []

[build-dependencies]
cargo_metadata = "0.23.1"

# https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=lto#default-profiles

# https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=lto#release
# [profile.release]

# https://doc.rust-lang.org/cargo/reference/profiles.html?highlight=lto#release
# inclut les symboles de débugage, utiles pour Heaptrack
# [profile.dev]

[profile.profiling]
inherits = "release"
debug = true               # inclut les symboles de debug dans le binaire
lto = true                 # optionnel, améliore les optimisations
opt-level = 3              # niveau d’optimisation
split-debuginfo = 'packed' # conserve les symboles dans le binaire (Linux)

# https://bheisler.github.io/criterion.rs/book/getting_started.html#step-1---add-dependency-to-cargotoml
# [[bench]]
# harness = false
# name = "audio_filters"
